[project]
name = "manimolconv"
version = "0.0.2"
authors = [
  { name="Hugo Onghai", email="hugoonghai@g.ucla.edu" },
]
description = "A Python package that uses Manim to visualize graph convolution operations on molecular structures."
readme = "README.md"
requires-python = ">=3.8,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"